Update dev with latest changes

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -53,15 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n",
       "✓ Librerías importadas correctamente\n",
       "✓ Archivo de datos: ../farmers-protest-tweets-2021-2-4.json\n"
      ]
@@ -74,7 +72,7 @@
     "import time\n",
     "from datetime import datetime\n",
     "\n",
-    "# Importar las funciones implementadas\n",
+    "\n",
     "from q1_time import q1_time\n",
     "from q1_memory import q1_memory\n",
     "from q2_time import q2_time\n",
@@ -82,10 +80,10 @@
     "from q3_time import q3_time\n",
     "from q3_memory import q3_memory\n",
     "\n",
-    "# Ruta al archivo de datos\n",
+    "\n",
     "file_path = \"../farmers-protest-tweets-2021-2-4.json\"\n",
     "\n",
-    "# Para profiling de memoria\n",
+    "\n",
     "%load_ext memory_profiler\n",
     "\n",
     "print(\"✓ Librerías importadas correctamente\")\n",
@@ -116,20 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q1 TIME-OPTIMIZED\n",
       "============================================================\n",
-      "\n",
-      "⏱️  Tiempo de ejecución: 9.3522 segundos\n",
-      "\n",
-      "📊 Top 10 Fechas con Más Tweets:\n",
+      "Tiempo de ejecución: 9.9888 segundos\n",
+      "Top 10 Fechas con Más Tweets:\n",
       "\n",
       " 1. 2021-02-12 - Usuario: @RanbirS00614606\n",
       " 2. 2021-02-13 - Usuario: @MaanDee08215437\n",
@@ -147,7 +142,6 @@
    "source": [
     "# Q1 Time-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
     "print(\"Q1 TIME-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -155,31 +149,29 @@
     "result_q1_time = q1_time(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n📊 Top 10 Fechas con Más Tweets:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Fechas con Más Tweets:\\n\")\n",
     "\n",
     "for idx, (date, username) in enumerate(result_q1_time, 1):\n",
     "    print(f\"{idx:2d}. {date} - Usuario: @{username}\")\n",
     "\n",
-    "# Guardar resultados para comparación\n",
     "q1_time_result = result_q1_time\n",
     "q1_time_elapsed = elapsed_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q1 MEMORY-OPTIMIZED\n",
       "============================================================\n",
       "\n",
-      "⏱️  Tiempo de ejecución: 16.9625 segundos\n",
+      "Tiempo de ejecución: 16.9289 segundos\n",
       "\n",
       "📊 Top 10 Fechas con Más Tweets:\n",
       "\n",
@@ -199,7 +191,6 @@
    "source": [
     "# Q1 Memory-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
     "print(\"Q1 MEMORY-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -207,20 +198,20 @@
     "result_q1_memory = q1_memory(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n📊 Top 10 Fechas con Más Tweets:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Fechas con Más Tweets:\\n\")\n",
     "\n",
     "for idx, (date, username) in enumerate(result_q1_memory, 1):\n",
     "    print(f\"{idx:2d}. {date} - Usuario: @{username}\")\n",
     "\n",
-    "# Guardar resultados para comparación\n",
+    "\n",
     "q1_memory_result = result_q1_memory\n",
     "q1_memory_elapsed = elapsed_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +219,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔍 Verificación: Resultados idénticos = True\n",
-      "⚡ Diferencia de tiempo: 7.6103 segundos\n"
+      "Verificación: Resultados idénticos = True\n",
+      "Diferencia de tiempo: 6.9401 segundos\n"
      ]
     }
    ],
    "source": [
     "# Comparación Q1\n",
     "\n",
-    "print(f\"\\n🔍 Verificación: Resultados idénticos = {result_q1_time == result_q1_memory}\")\n",
-    "print(f\"⚡ Diferencia de tiempo: {abs(q1_time_elapsed - q1_memory_elapsed):.4f} segundos\")"
+    "print(f\"\\nVerificación: Resultados idénticos = {result_q1_time == result_q1_memory}\")\n",
+    "print(f\"Diferencia de tiempo: {abs(q1_time_elapsed - q1_memory_elapsed):.4f} segundos\")"
    ]
   },
   {
@@ -251,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,10 +250,10 @@
      "output_type": "stream",
      "text": [
       "Midiendo memoria para q1_time...\n",
-      "peak memory: 127.82 MiB, increment: 0.12 MiB\n",
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n",
       "\n",
       "Midiendo memoria para q1_memory...\n",
-      "peak memory: 127.82 MiB, increment: 0.00 MiB\n"
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -299,20 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q2 TIME-OPTIMIZED\n",
       "============================================================\n",
-      "\n",
-      "⏱️  Tiempo de ejecución: 9.0432 segundos\n",
-      "\n",
-      "😀 Top 10 Emojis Más Usados:\n",
+      "Tiempo de ejecución: 9.5493 segundos\n",
+      "Top 10 Emojis Más Usados:\n",
       "\n",
       " 1. 🙏 - 7,286 veces\n",
       " 2. 😂 - 3,072 veces\n",
@@ -330,7 +318,7 @@
    "source": [
     "# Q2 Time-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
+    "\n",
     "print(\"Q2 TIME-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -338,8 +326,8 @@
     "result_q2_time = q2_time(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n😀 Top 10 Emojis Más Usados:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Emojis Más Usados:\\n\")\n",
     "\n",
     "for idx, (emoji, count) in enumerate(result_q2_time, 1):\n",
     "    print(f\"{idx:2d}. {emoji} - {count:,} veces\")\n",
@@ -350,20 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q2 MEMORY-OPTIMIZED\n",
       "============================================================\n",
-      "\n",
-      "⏱️  Tiempo de ejecución: 9.1999 segundos\n",
-      "\n",
-      "😀 Top 10 Emojis Más Usados:\n",
+      "Tiempo de ejecución: 9.0544 segundos\n",
+      "Top 10 Emojis Más Usados:\n",
       "\n",
       " 1. 🙏 - 7,286 veces\n",
       " 2. 😂 - 3,072 veces\n",
@@ -381,7 +366,7 @@
    "source": [
     "# Q2 Memory-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
+    "\n",
     "print(\"Q2 MEMORY-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -389,8 +374,8 @@
     "result_q2_memory = q2_memory(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n😀 Top 10 Emojis Más Usados:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Emojis Más Usados:\\n\")\n",
     "\n",
     "for idx, (emoji, count) in enumerate(result_q2_memory, 1):\n",
     "    print(f\"{idx:2d}. {emoji} - {count:,} veces\")\n",
@@ -401,29 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "🔍 Verificación: Resultados idénticos = True\n",
-      "⚡ Diferencia de tiempo: 0.1566 segundos\n"
+      "Verificación: Resultados idénticos = True\n",
+      "Diferencia de tiempo: 0.4949 segundos\n"
      ]
     }
    ],
    "source": [
-    "# Comparación Q2\n",
     "\n",
-    "print(f\"\\n🔍 Verificación: Resultados idénticos = {result_q2_time == result_q2_memory}\")\n",
-    "print(f\"⚡ Diferencia de tiempo: {abs(q2_time_elapsed - q2_memory_elapsed):.4f} segundos\")"
+    "print(f\"Verificación: Resultados idénticos = {result_q2_time == result_q2_memory}\")\n",
+    "print(f\"Diferencia de tiempo: {abs(q2_time_elapsed - q2_memory_elapsed):.4f} segundos\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,10 +414,10 @@
      "output_type": "stream",
      "text": [
       "Midiendo memoria para q2_time...\n",
-      "peak memory: 127.82 MiB, increment: 0.00 MiB\n",
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n",
       "\n",
       "Midiendo memoria para q2_memory...\n",
-      "peak memory: 127.82 MiB, increment: 0.00 MiB\n"
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -471,20 +454,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q3 TIME-OPTIMIZED\n",
       "============================================================\n",
-      "\n",
-      "⏱️  Tiempo de ejecución: 9.1369 segundos\n",
-      "\n",
-      "👥 Top 10 Usuarios Más Mencionados:\n",
+      "Tiempo de ejecución: 7.9409 segundos\n",
+      "Top 10 Usuarios Más Mencionados:\n",
       "\n",
       " 1. @narendramodi - 2,265 menciones\n",
       " 2. @Kisanektamorcha - 1,840 menciones\n",
@@ -502,7 +482,6 @@
    "source": [
     "# Q3 Time-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
     "print(\"Q3 TIME-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -510,8 +489,8 @@
     "result_q3_time = q3_time(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n👥 Top 10 Usuarios Más Mencionados:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Usuarios Más Mencionados:\\n\")\n",
     "\n",
     "for idx, (username, count) in enumerate(result_q3_time, 1):\n",
     "    print(f\"{idx:2d}. @{username} - {count:,} menciones\")\n",
@@ -522,20 +501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "Q3 MEMORY-OPTIMIZED\n",
       "============================================================\n",
-      "\n",
-      "⏱️  Tiempo de ejecución: 9.0395 segundos\n",
-      "\n",
-      "👥 Top 10 Usuarios Más Mencionados:\n",
+      "Tiempo de ejecución: 8.0370 segundos\n",
+      "Top 10 Usuarios Más Mencionados:\n",
       "\n",
       " 1. @narendramodi - 2,265 menciones\n",
       " 2. @Kisanektamorcha - 1,840 menciones\n",
@@ -553,7 +529,6 @@
    "source": [
     "# Q3 Memory-Optimized: Ejecución y Medición\n",
     "\n",
-    "print(\"=\" * 60)\n",
     "print(\"Q3 MEMORY-OPTIMIZED\")\n",
     "print(\"=\" * 60)\n",
     "\n",
@@ -561,8 +536,8 @@
     "result_q3_memory = q3_memory(file_path)\n",
     "elapsed_time = time.time() - start_time\n",
     "\n",
-    "print(f\"\\n⏱️  Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
-    "print(f\"\\n👥 Top 10 Usuarios Más Mencionados:\\n\")\n",
+    "print(f\"Tiempo de ejecución: {elapsed_time:.4f} segundos\")\n",
+    "print(f\"Top 10 Usuarios Más Mencionados:\\n\")\n",
     "\n",
     "for idx, (username, count) in enumerate(result_q3_memory, 1):\n",
     "    print(f\"{idx:2d}. @{username} - {count:,} menciones\")\n",
@@ -573,29 +548,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "🔍 Verificación: Resultados idénticos = True\n",
-      "⚡ Diferencia de tiempo: 0.0974 segundos\n"
+      "Verificación: Resultados idénticos = True\n",
+      "Diferencia de tiempo: 0.0960 segundos\n"
      ]
     }
    ],
    "source": [
     "# Comparación Q3\n",
     "\n",
-    "print(f\"\\n🔍 Verificación: Resultados idénticos = {result_q3_time == result_q3_memory}\")\n",
-    "print(f\"⚡ Diferencia de tiempo: {abs(q3_time_elapsed - q3_memory_elapsed):.4f} segundos\")"
+    "print(f\"Verificación: Resultados idénticos = {result_q3_time == result_q3_memory}\")\n",
+    "print(f\"Diferencia de tiempo: {abs(q3_time_elapsed - q3_memory_elapsed):.4f} segundos\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -603,10 +577,10 @@
      "output_type": "stream",
      "text": [
       "Midiendo memoria para q3_time...\n",
-      "peak memory: 127.82 MiB, increment: 0.00 MiB\n",
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n",
       "\n",
       "Midiendo memoria para q3_memory...\n",
-      "peak memory: 127.82 MiB, increment: 0.00 MiB\n"
+      "peak memory: 77.01 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -633,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -644,12 +618,12 @@
       "COMPARACIÓN DE TIEMPOS DE EJECUCIÓN\n",
       "============================================================\n",
       "Pregunta          Versión  Tiempo (s)\n",
-      "      Q1   Time-Optimized      9.3522\n",
-      "      Q1 Memory-Optimized     16.9625\n",
-      "      Q2   Time-Optimized      9.0432\n",
-      "      Q2 Memory-Optimized      9.1999\n",
-      "      Q3   Time-Optimized      9.1369\n",
-      "      Q3 Memory-Optimized      9.0395\n",
+      "      Q1   Time-Optimized      9.9888\n",
+      "      Q1 Memory-Optimized     16.9289\n",
+      "      Q2   Time-Optimized      9.5493\n",
+      "      Q2 Memory-Optimized      9.0544\n",
+      "      Q3   Time-Optimized      7.9409\n",
+      "      Q3 Memory-Optimized      8.0370\n",
       "============================================================\n"
      ]
     }
